default/objects/Tools__c/Tools__c.object-meta.xml
<CustomObject>
    <label>Tools</label>
    <nameField>
        <label>Tools Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>