default/objects/Tools__c/fields/Available_to_use__c.field-meta.xml
<CustomField>
    <fullName>Available_to_use__c</fullName>
    <formula>Total_quantity__c - Damaged_quantity__c -  Retired_quantity__c -  Issued_quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available to use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>