default/objects/Tools__c/fields/Damaged__c.field-meta.xml
<CustomField>
    <fullName>Damaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Damaged</label>
    <type>Checkbox</type>
</CustomField>