default/objects/Tools__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issue</label>
    <type>Checkbox</type>
</CustomField>