default/objects/Tools__c/fields/Issued_quantity__c.field-meta.xml
<CustomField>
    <fullName>Issued_quantity__c</fullName>
    <label>Issued quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>