default/objects/Tools__c/fields/Total_quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_quantity__c</fullName>
    <label>Total quantity</label>
    <summarizedField>Tools_Entry__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Tools_Entry__c.Type__c</field>
        <operation>equals</operation>
        <value>ADDED NEW</value>
    </summaryFilterItems>
    <summaryForeignKey>Tools_Entry__c.Tools__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>