default/objects/Tools__c/validationRules/Prevent_Decimal_Value_On_Issued_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Decimal_Value_On_Issued_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(REGEX(TEXT( Issued_quantity__c ), &quot;^\\d+$&quot;)),
NOT( Issued_quantity__c &lt;= 0))</errorConditionFormula>
    <errorDisplayField>Issued_quantity__c</errorDisplayField>
    <errorMessage>Decimal value is not allowed in issued quantity field, Please provide whole number</errorMessage>
</ValidationRule>