default/objects/Tools__c/validationRules/Prevent_negative_in_available_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_negative_in_available_field</fullName>
    <active>true</active>
    <errorConditionFormula>Available_to_use__c &lt;0</errorConditionFormula>
    <errorMessage>Negative value is not allowed in available to use quantity field, Please enter positive number.</errorMessage>
</ValidationRule>