default/objects/Tools__c/validationRules/Prevent_Negative_Value_In_IssuedQuantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Negative_Value_In_IssuedQuantity</fullName>
    <active>true</active>
    <errorConditionFormula>Issued_quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Issued_quantity__c</errorDisplayField>
    <errorMessage>Negative value is not allowed in issued quantity field, Please enter positive number.</errorMessage>
</ValidationRule>